@@ -2969,7 +2969,7 @@ See also: @wall, @wizwall
 & @scan
   @scan[/<switch>] <command>
   
-  @scan gives you a list of all objects containing $commands (user-defined
+  @scan gives you a list of all objects containing $-commands (user-defined
   commands) which could match <command>. If given no switches, it checks
   you, your possessions, your location, objects in your location, the
   zone/zone master room of your location, your zone, and objects in the 
@@ -2978,11 +2978,17 @@ See also: @wall, @wizwall
   matched, and what attributes they are in. It does NOT scan objects
   that you do not control and are not set VISUAL.
   
-  This command can take four switches:
+  This command any combination of these four switches:
      /room     --   just matches on your location and objects in it.
      /self     --   just matches on you and anything you're carrying.
      /zone     --   just matches on zones of your location and yourself.
      /globals  --   just matches on objects in the master room.
+     
+  If no switch is given, all locations are checked. <command> must be
+  entered exactly as you would type it (so, to match the $-command
+  $foo *: you must type '@scan foo <something>', not just '@scan foo').
+  
+See also: $-commands, EVALUATION ORDER
 & @search
   @search [<player>] [<classN>=<restrictionN>[,...]][,<begin>,<end>]
   
