@@ -27,6 +27,7 @@ Minor Changes:
 Commands:
  * New @include <obj>/<attr> command, which inserts <attr> into the current
    action list. Patch by Javelin.
+ * @scan can now take multiple switches at the same time. [MG]
    
 Functions:
  * Added strfirstof() and strallof(), which return the first arg/all args
